--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        jcenter()
+apply plugin: 'com.android.application'
+
+android {
+    compileSdkVersion 19
+    buildToolsVersion "24.0.2"
+
+    defaultConfig {
+        applicationId "com.deitel.addressbook"
+        minSdkVersion 18
+        targetSdkVersion 19
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
+dependencies {
+    compile 'com.android.support:support-v4:19.1.0'
 }
